@startuml

abstract Builder{
   abstract void createA();//地基
    abstract void createB();//钢筋混凝土
    abstract void createC();//铺地砖
    abstract void createD();//粉刷
    abstract House getHouse(); //产品
}
note left:盖房步骤


class House{
    String A;//地基
    String B;//钢筋混凝土
    String C;//铺地砖
    String D;//粉刷
}
note left:房子细节

Worker ..|> Builder
House --* Worker

class Worker
note left:工人具体实现类

class TotalCommand{
    House build(Builder build);
}
Builder <.. TotalCommand

class 客户端{}
note top:客户端只与总指挥交互

客户端 --> TotalCommand

@enduml